unpackaged/main/default/objects/Model__c/fields/Beds__c.field-meta.xml
<CustomField>
        <fullName>Beds__c</fullName>
        <label>Beds</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>