unpackaged/main/default/objects/Model__c/fields/Code__c.field-meta.xml
<CustomField>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>16</length>
        <required>true</required>
        <type>Text</type>
    </CustomField>