unpackaged/main/default/objects/Model__c/fields/Floors__c.field-meta.xml
<CustomField>
        <fullName>Floors__c</fullName>
        <label>Floors</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>