unpackaged/main/default/objects/Model__c/fields/Garages__c.field-meta.xml
<CustomField>
        <fullName>Garages__c</fullName>
        <label>Garages</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>