unpackaged/main/default/objects/Model__c/fields/Half_Baths__c.field-meta.xml
<CustomField>
        <fullName>Half_Baths__c</fullName>
        <label>Half Baths</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>