unpackaged/main/default/objects/Model__c/fields/Info__c.field-meta.xml
<CustomField>
        <fullName>Info__c</fullName>
        <formula>TEXT(Sq_Ft__c) &amp; ' sf./' &amp; TEXT(Beds__c)  &amp; ' beds/' &amp; TEXT(Baths__c+0.5*Half_Baths__c) &amp; ' ba./' &amp; TEXT(Garages__c) &amp; ' gr.'</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Info</label>
        <type>Text</type>
    </CustomField>