unpackaged/main/default/objects/Model__c/fields/Newstar_Sync_Status__c.field-meta.xml
<CustomField>
        <fullName>Newstar_Sync_Status__c</fullName>
        <label>Newstar Sync Status</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>