unpackaged/main/default/objects/Model__c/fields/Price__c.field-meta.xml
<CustomField>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>