unpackaged/main/default/objects/Model__c/fields/Sq_Ft__c.field-meta.xml
<CustomField>
        <fullName>Sq_Ft__c</fullName>
        <label>Sq. Ft.</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>